@@ -1,6 +1,7 @@
 Version 1.2.3
 - Added Chinese Translation (zh_cn) by Kzeroko (Was not in the last update by mistake)
 - Added Russian Translation (ru_ru) by The_Same_Cat
+- Added the Ability for mobs to be seen as a boss and miniboss even though the type is not using tags
 - Fixed Drowned crashing the game when throwing trident
 - Fixed Bows and Crossbows doing Melee Damage
 
